--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,6 +2,15 @@
 version: '3.1'
 
 services:
+  backend:
+    build: ./server
+    depends_on:
+      - postgres
+    volumes:
+      - ./server:/usr/src/app/
+    ports:
+      - "8080:8080"
+
   react-app:
     build: ./pc-configurator
     ports:
@@ -9,17 +18,31 @@ services:
     volumes:
       - /app/node_modules
     depends_on:
-      - db
+      - postgres
 
-  db:
-    image: postgres
-    hostname: postgres
-    container_name: postgres
+  postgres:
+    image: postgres:14.1-alpine
     restart: always
     environment:
-      POSTGRES_DB: app_db
-      POSTGRES_USER: app_user
-      POSTGRES_PASSWORD: secretpassword
+      - POSTGRES_USER=root
+      - POSTGRES_PASSWORD=root
+      - POSTGRES_DB=root
+    ports:
+      - "5432:5432"
     volumes:
-      - /postgres-data:/var/lib/postgresql/data
+      - ./db-create/create-db.sql:/docker-entrypoint-initdb.d/database-seed.sql
 
+  pgadmin:
+    container_name: pgadmin4_container
+    image: dpage/pgadmin4:7
+    restart: always
+    user: "${UID}:${GID}"
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@admin.com
+      PGADMIN_DEFAULT_PASSWORD: root
+    ports:
+      - "16543:80"
+    volumes:
+      - /pgadmin-data:/var/lib/pgadmin
+    depends_on:
+      - postgres
