--- a/pc-configurator/Dockerfile
+++ b/pc-configurator/Dockerfile
@@ -4,7 +4,7 @@ WORKDIR /app
 
 ENV PATH /app/node_modules/.bin:$PATH
 
-COPY package.json ./
+COPY package*.json ./
 COPY package-lock.json ./
  
 
@@ -12,5 +12,7 @@ RUN npm install --silent
 RUN npm install react-scripts@5.0.1 -g --silent
 
 COPY . ./
+
+EXPOSE 80
 
 CMD [ "npm", "start"]
