--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,27 +1,17 @@
-# select your base image to start with
-FROM node:14-alpine3.12
+FROM node:19.5.0-alpine
 
-# Create app directory
-# this is the location where you will be inside the container
-WORKDIR /usr/src/app
+WORKDIR /server
 
-# Install app dependencies
-# A wildcard is used to ensure both package.json AND package-lock.json are copied
-# where available (npm@5+)
-# copying packages first helps take advantage of docker layers
+ENV PATH /server/node_modules/.bin:$PATH
+
 COPY package*.json ./
 
+COPY package-lock.json ./
+
 RUN npm install
-# If you are building your code for production
-# RUN npm ci --only=production
 
-# Bundle app source
-COPY . .
+COPY . ./
 
-# Make this port accessible from outside the container
-# Necessary for your browser to send HTTP requests to your Node app
 EXPOSE 8080
 
-# Command to run when the container is ready
-# Separate arguments as separate values in the array
 CMD [ "npm", "run", "start"]
