--- a/pc-configurator/Dockerfile
+++ b/pc-configurator/Dockerfile
@@ -4,15 +4,15 @@ WORKDIR /app
 
 ENV PATH /app/node_modules/.bin:$PATH
 
-COPY package*.json ./
+COPY package.json ./
 COPY package-lock.json ./
  
 
 RUN npm install --silent
-RUN npm install react-scripts@5.0.1 -g --silent
+RUN npm install react-scripts@5.0.1 -g
 
 COPY . ./
 
-EXPOSE 80
+EXPOSE 3000
 
 CMD [ "npm", "start"]
