--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,14 +1,14 @@
 version: '3.1'
 
 services:
-  react-app:
-    build: ./pc-configurator
-    ports:
-      - 3000:3000
-    volumes:
-      - /app/node_modules
-    depends_on:
-      - postgres
+  # react-app:
+  #   build: ./pc-configurator
+  #   ports:
+  #     - 3000:3001
+  #   volumes:
+  #     - /app/node_modules
+  #   depends_on:
+  #     - postgres
 
   postgres:
     image: postgres:14.1-alpine
